# rust-graphql-complex-api-example

./: Cargo.toml  README.md  docker-compose.yml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
src/: api.rs  lib.rs  main.rs  schema.rs
src/db/: mod.rs  pagination.rs
src/graphql/: cinema.rs  mod.rs  movie.rs  movie_to_cinema.rs  schema.graphql
src/models/: cinema.rs  mod.rs  movie.rs  movie_to_cinema.rs
