[package]
name = "rust-graphql-complex-api-example"
version = "0.1.0"
authors = ["Etienne Prothon <etienne.prothon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["r2d2", "chrono", "serde_json", "postgres"]}
diesel_migrations = "1.4"
juniper = "0.14"
juniper-from-schema = "0.5"
juniper-eager-loading = "0.5"
log = "0.4"
r2d2 = "0.8"
actix-rt = "1"
actix-web = "2.0"
serde = { version = "1.0",  features= ["derive"] }
serde_json = "1.0"
chrono = "0.4"
env_logger = "0.7"